--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,11 +11,7 @@
         <br />
         <button id="newQuote">Show New Quote</button>
         <br /><br />
-        <div>
-            <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-            <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-            <button onclick="addQuote()">Add Quote</button>
-        </div>
+        <div id="formContainer"></div>
         <script src="script.js"></script>
     </body>
 </html>
