added import file input in index page

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -12,6 +12,7 @@
         <button id="newQuote">Show New Quote</button>
         <br /><br />
         <div id="formContainer"></div>
+        <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
         <script src="script.js"></script>
     </body>
 </html>
