--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,6 +14,7 @@
         <div id="formContainer"></div>
         <br /><br />
         <h3>Export Quotes</h3>
+        <button onclick="exportToJsonFile()">Export Quotes</button>
         <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
         <script src="script.js"></script>
     </body>
